--- a/MediServe/AndroidManifest.xml
+++ b/MediServe/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ChangePass" android:label="@string/app_name"></activity>
+        <activity android:name=".MainScreen" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
