--- a/MediServe/AndroidManifest.xml
+++ b/MediServe/AndroidManifest.xml
@@ -20,6 +20,12 @@
         </activity>
         <activity android:name=".ChangePass" android:label="@string/app_name"></activity>
         <activity android:name=".MainScreen" android:label="@string/app_name"></activity>
+        <activity android:name=".PatientInfo" android:label="@string/app_name"></activity>
+        <activity android:name=".PlanOfCare" android:label="@string/app_name"></activity>
+        <activity android:name=".Education" android:label="@string/app_name"></activity>
+        <activity android:name=".Information" android:label="@string/app_name"></activity>
+        <activity android:label="@string/app_name" android:name=".MyPatients"></activity>
+        <activity android:name=".FindPatients" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
